--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>c Suhu</h2>
+    <h2>Kalkulator Suhu</h2>
     <p text align=justify>Masukkan suhu derajat Celsius (°C) ke kotak di bawah lalu klik tombol konversi untuk mendapatkan hasil konversi dalam bentuk Fahrenheit (°F).</p>
     <hr>
     <label for="celsius">Derajat Celsius:</label>
